# liteparse

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  MARKDOWN_PROGRESS.md  README.md  README.zh-CN.md
.github/workflows/: ci-node.yml  ci-python.yml  release-crates.yml  release-node.yml  release-python.yml
crates/liteparse/: Cargo.toml  README.md
crates/liteparse-layout/: Cargo.toml  build.rs  build_support.rs
crates/liteparse-layout-provider/: Cargo.toml
crates/liteparse-layout-provider/src/: lib.rs  yolo.rs
crates/liteparse-layout-yolo/: Cargo.toml  build.rs
crates/liteparse-layout-yolo/src/: detector.rs  error.rs  labels.rs  lib.rs  model.rs  postprocess.rs  preprocess.rs  types.rs
crates/liteparse-layout/src/: detector.rs  error.rs  labels.rs  lib.rs  model.rs  order.rs  postprocess.rs  preprocess.rs  types.rs
crates/liteparse-layout/tests/: build_support.rs
crates/liteparse-napi/: Cargo.toml
crates/liteparse-napi/src/: lib.rs  types.rs
crates/liteparse-python/: Cargo.toml
crates/liteparse-python/src/: cli.rs  lib.rs
crates/liteparse-wasm/: Cargo.toml
crates/liteparse-wasm/src/: lib.rs
crates/liteparse/src/: config.rs  conversion.rs  extract.rs  font_cmap.rs  glyph_names.rs  layout.rs  layout_annotate.rs  layout_merge.rs  layout_order.rs  layout_yolo.rs  lib.rs  main.rs  ocr_merge.rs  parser.rs  projection.rs  render.rs  search.rs  types.rs
crates/liteparse/src/markdown_layout/: blocks.rs  classify.rs  cross_region.rs  flags.rs  headings.rs  hints.rs  inline.rs  mod.rs  paragraphs.rs  repetition.rs  tables.rs  test_helpers.rs
crates/liteparse/src/ocr/: http_simple.rs  mod.rs  tesseract.rs
crates/liteparse/src/output/: json.rs  markdown.rs  text.rs
crates/pdfium/: Cargo.toml
crates/pdfium-sys/src/: dynamic.rs
crates/pdfium/src/: bitmap.rs  page.rs  struct_tree.rs
docs/src/content/docs/liteparse/: cli-reference.md  getting_started.mdx  index.md
docs/src/content/docs/liteparse/guides/: agent-skill.md  browser-usage.md  library-usage.mdx  multi-format.md  ocr.md  parsing-urls.md  server-usage.md  visual-citations.mdx
docs/superpowers/plans/: 2026-06-15-yolo-layout.md
docs/superpowers/specs/: 2026-06-15-yolo-layout-design.md
scripts/: build-musl-node.sh  export-yolo-layout-onnx.py
wasm-demo-site/: index.html  yolo-layout.html
