[workspace]
resolver = "2"
members = [
  "crates/liteparse",
  "crates/liteparse-layout",
  "crates/liteparse-napi",
  "crates/liteparse-python",
  "crates/liteparse-wasm",
  "crates/pdfium",
  "crates/pdfium-sys",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/run-llama/liteparse"
license = "Apache-2.0"
