[package]
name = "liteparse-layout-yolo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "YOLO document layout detection support for LiteParse"

[features]
default = ["backend-ndarray"]
backend-ndarray = []
backend-metal = ["dep:burn-wgpu", "burn-wgpu/metal"]
backend-vulkan = ["dep:burn-wgpu", "burn-wgpu/vulkan"]
backend-webgpu = ["dep:burn-wgpu", "burn-wgpu/webgpu", "dep:tokio"]

[dependencies]
burn = { package = "burn-core", version = "0.21", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.21", default-features = false, features = ["std"] }
burn-nn = { version = "0.21", default-features = false, features = ["std"] }
burn-store = { version = "0.21", default-features = false, features = ["std", "burnpack"] }
burn-wgpu = { version = "0.21", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.52.3", default-features = false, features = ["sync"], optional = true }

[build-dependencies]
burn-onnx = "=0.21.0"

[dev-dependencies]
serde_json = "1.0.145"
