[package]
name = "liteparse"
version = "2.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast, lightweight PDF and document parsing with spatial text extraction"
readme = "README.md"

[lib]
name = "liteparse"

[[bin]]
name = "lit"
path = "src/main.rs"

[features]
default = ["tesseract"]
layout-yolo = ["dep:liteparse-layout", "liteparse-layout/backend-ndarray"]
layout-yolo-metal = ["dep:liteparse-layout", "liteparse-layout/backend-metal"]
layout-yolo-vulkan = ["dep:liteparse-layout", "liteparse-layout/backend-vulkan"]
layout-yolo-webgpu = ["dep:liteparse-layout", "liteparse-layout/backend-webgpu"]
tesseract = ["dep:tesseract-rs"]

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
infer = "0.19.0"
liteparse-layout = { path = "../liteparse-layout", version = "0.1.0", default-features = false, optional = true }
ordered-float = "5.3.0"
pdfium = { package = "liteparse-pdfium", version = "1.2.0", path = "../pdfium" }
pdfium-sys = { package = "liteparse-pdfium-sys", version = "1.2.0", path = "../pdfium-sys" }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "form", "multipart", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2"
tesseract-rs = { git = "https://github.com/YageGeng/tesseract-rs", branch = "master", features = ["build-tesseract"], optional = true }
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "time", "io-util"] }
url = "2"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs", "process"] }

[dev-dependencies]
serial_test = "3"
